--- a/ProAcc/Asset/css/Activity.css
+++ b/ProAcc/Asset/css/Activity.css
@@ -245,9 +245,9 @@ img {
     vertical-align: middle
 }
 
-a {
+/*a {
     color: inherit
-}
+}*/
 
 .w3-table, .w3-table-all {
     border-collapse: collapse;
