--- a/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationIndex.cshtml
@@ -4,6 +4,11 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
+@*<style>
+    input[aria-controls=tblProjectCreation] {
+ border: 1px solid #ced4da !important;
+}
+</style>*@
 
 <table class="table" id="tblActivityCreation">
     <thead>
