--- a/ProAcc/Asset/css/Menu_new.css
+++ b/ProAcc/Asset/css/Menu_new.css
@@ -9932,7 +9932,6 @@ a, button, .btn {
         padding: 0 1.5rem;
         height: 60px;
         /*DK - #63a09e*/
-        /*background: #12ce9b  !important;*/
         background: white !important;
     }
 
@@ -9998,7 +9997,7 @@ a, button, .btn {
     background-repeat: no-repeat;
     background-position-x: right;
     width: 100%;
-    height: 80px;
+    height: 100px;
     top: 0;
   
 }
@@ -10008,7 +10007,7 @@ a, button, .btn {
 }
 
 .fixed-header .app-main {
-    padding-top: 65px
+    padding-top: 60px
 }
 
 .fixed-header:not(.fixed-sidebar):not(.closed-sidebar) .app-sidebar .app-header__logo {
@@ -10763,7 +10762,7 @@ a, button, .btn {
     }
 
     .app-main .app-main__inner {
-        padding: 10px 10px 0;
+        padding: 30px 30px 0;
         flex: 1
     }
 
@@ -15367,7 +15366,6 @@ a.badge-alternate:focus {
 }
 
     .nav-link .nav-link-icon {
-        /*color: white;*/
         color: black;
         font-size: 1rem;
         width: 30px;
@@ -15688,9 +15686,7 @@ legend {
 .scrollbar-sidebar,
 .scrollbar-container {
     position: relative;
-    height: 100%;
-    margin-top:10px;
-
+    height: 100%
 }
 
 .scroll-area {
@@ -15757,8 +15753,8 @@ legend {
     font-family: 'Font Awesome 5 Free';
     font-style: normal;
     font-weight: 900;
-    src: url(../../Content/fonts/fa-solid-900.eot);
-    src: url(../../Content/fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../../Content/fonts/fa-solid-900.woff2) format("woff2"), url(../../Content/fonts/fa-solid-900.woff) format("woff"), url(../../Content/fonts/fa-solid-900.ttf) format("truetype"), url(../../Content/fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-solid-900.eot);
+    src: url(../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../fonts/fa-solid-900.woff2) format("woff2"), url(../fa-solid-900.woff) format("woff"), url(../fonts/fa-solid-900.ttf) format("truetype"), url(../fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa, .fas {
@@ -22304,7 +22300,6 @@ legend {
     }
 
     .hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner::before, .hamburger.is-active .hamburger-inner::after {
-        /*background-color: white;*/
         background-color: black;
     }
 
@@ -22322,14 +22317,6 @@ legend {
 }
 
     .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
-        /*width: 24px;
-        height: 2px;
-        background-color: white;
-        border-radius: 10px;
-        position: absolute;
-        transition-property: transform;
-        transition-duration: 0.15s;
-        transition-timing-function: ease*/
         width: 24px;
         height: 2px;
         background-color: black;
