--- a/ProAcc/Asset/css/main.css
+++ b/ProAcc/Asset/css/main.css
@@ -25,6 +25,7 @@
 body, html {
 	height: 100%;
 	font-family: sans-serif;
+    /*font-family: 'Arvo', serif;*/
 }
 
 /* ------------------------------------ */
@@ -76,6 +77,7 @@ button {
 	outline: none !important;
 	border: none;
 	background: transparent;
+
 }
 
 button:hover {
