--- a/ProAcc/Views/Assessment/CreateAnalysis.cshtml
+++ b/ProAcc/Views/Assessment/CreateAnalysis.cshtml
@@ -271,31 +271,42 @@
             </div>
         </div>
     </div>
-    <div style="visibility:hidden">
-        <div id="dialog-message" title="Info">
-            <p>
-                <span class="ui-icon ui-icon-info" style="float:left; margin:0 7px 50px 0;"></span>
-                <h6>@ViewBag.Message</h6>
-            </p>
-        </div>
-        @if (ViewBag.Message != null)
-        {
-            <script type="text/javascript">
-                $(function () {
+    @*<div style="visibility:hidden">
+            <div id="dialog-message" title="Info">
+                <p>
+                    <span class="ui-icon ui-icon-info" style="float:left; margin:0 7px 50px 0;"></span>
+                    <h6>@ViewBag.Message</h6>
+                </p>
+            </div>
+            @if (ViewBag.Message != null)
+            {
+                <script type="text/javascript">
+                    $(function () {
 
-                    $("#dialog-message").dialog({
-                        modal: true,
-                        buttons: {
-                            Ok: function () {
-                                $(this).dialog("close");
+                        $("#dialog-message").dialog({
+                            modal: true,
+                            buttons: {
+                                Ok: function () {
+                                    $(this).dialog("close");
+                                }
                             }
-                        }
+                        });
                     });
-                });
-            </script>
+                </script>
 
-        }
-    </div>
+            }
+        </div>*@
+    @if (ViewBag.Message != null)
+    {
+
+        <a id="Msg" style="display:none">@ViewBag.Message</a>
+        <script type="text/javascript">
+            var a = $('#Msg').text();
+            //debugger;
+            Notiflix.Report.Info("ProAcc Info !", a);
+        </script>
+
+    }
 </div>
 @Html.Hidden("RedirectTo", Url.Action("ReadinessReport", "Assessment"))
 <script>
