--- a/ProAcc/Views/Assessment/FioriAppsReport.cshtml
+++ b/ProAcc/Views/Assessment/FioriAppsReport.cshtml
@@ -60,7 +60,7 @@
 <div class="row">
     <div class="col-lg-12 card" style="padding:0px;">
 
-        <div class="tableFixHead outer table-striped table-hover" style="font-size:12px;">
+        <div class="tableFixHead outer table-striped table-hover">
             @*<table>*@
             <table class="mb-0 table table-striped table-hover">
                 <thead class="thead-light">
